--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -4,10 +4,6 @@
   width: 650px;
 }
 
-* {
-    box-sizing: border-box;
-}
-
 body {
     font-family: Verdana, sans-serif;
 }
@@ -45,7 +41,25 @@ body {
     right: 2px;
 }
 
-.prev: hover, .next:hover {
-    background-color = rgba(0,0,0, 0.7);
-    color = whitesmoke;
+tbody tr:nth-child(odd) {
+  background-color: #f0ffff; 
 }
+
+tbody tr:nth-child(even) {
+  background-color: #ffffff;
+}
+
+.table {
+    position: relative;
+    margin: auto;
+    align-items: center;
+}
+
+td 
+{
+    height: 100px; 
+    width: 250px;
+    text-align: center; 
+    vertical-align: middle;
+}
+
