--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -2,10 +2,23 @@
   margin-left: auto;
   margin-right: auto;
   width: 650px;
+  text-align: center; 
 }
 
 body {
-    font-family: Verdana, sans-serif;
+    text-align: center; 
+    font-family: "Gill Sans", sans-serif;
+    border: 4px solid  skyblue;
+    border-radius: 20px;
+}
+
+h1 {
+    font-family: "Montserrat", sans-serif; 
+    color: steelblue;
+}
+
+li {
+    text-align: left;
 }
 
 /* Slideshow container */
@@ -42,11 +55,11 @@ body {
 }
 
 tbody tr:nth-child(odd) {
-  background-color: #f0ffff; 
+  background-color: aliceblue;
 }
 
 tbody tr:nth-child(even) {
-  background-color: #ffffff;
+  background-color: white;
 }
 
 .table {
@@ -57,9 +70,14 @@ tbody tr:nth-child(even) {
 
 td 
 {
-    height: 100px; 
+    height: 60px; 
     width: 250px;
     text-align: center; 
     vertical-align: middle;
 }
 
+iframe {
+    height: 400px; 
+    width: 700px;
+
+}
