--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -5,20 +5,45 @@
   text-align: center; 
 }
 
-body {
-    text-align: center; 
-    font-family: "Gill Sans", sans-serif;
-    border: 4px solid  skyblue;
-    border-radius: 20px;
+h1 {
+    font-family: 'Hind', sans-serif;
+    font-size: 50px;
+    color: darkblue;
 }
 
-h1 {
-    font-family: "Montserrat", sans-serif; 
+h2 {
+    font-family: 'Hind', sans-serif; 
+    font-size: 35px;
     color: steelblue;
 }
 
-li {
-    text-align: left;
+body {
+    text-align: center; 
+    border: 5px solid  skyblue;
+    border-radius: 20px;
+}
+
+p, div, h3 {
+    font-family: 'Baloo Tamma 2', cursive;
+    font-size: 22px;
+}
+
+ol>li {
+  margin:0;
+  padding:0 0 0 2em;
+  text-indent:-2em;
+  list-style-type:none;
+  counter-increment:item;
+  text-align: left;
+}
+
+ol>li:before {
+  display:inline-block;
+  width:1.5em;
+  padding-right:0.5em;
+  font-weight:bold;
+  text-align:right;
+  content:counter(item) ".";
 }
 
 /* Slideshow container */
