--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,20 +1,22 @@
 #content {
   margin-left: auto;
   margin-right: auto;
-  width: 650px;
+  width: 800px;
   text-align: center; 
 }
 
 h1 {
-    font-family: 'Hind', sans-serif;
-    font-size: 50px;
+    font-family: 'Baloo Tamma 2', cursive;
+    font-size: 70px;
     color: darkblue;
+    margin-bottom: 10px;
 }
 
 h2 {
-    font-family: 'Hind', sans-serif; 
-    font-size: 35px;
+    font-family: 'Baloo Tamma 2', cursive; 
+    font-size: 40px;
     color: steelblue;
+    margin-top: 0px;
 }
 
 body {
@@ -24,7 +26,7 @@ body {
 }
 
 p, div, h3 {
-    font-family: 'Baloo Tamma 2', cursive;
+    font-family: 'Lato', sans-serif;
     font-size: 22px;
 }
 
