--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -6,28 +6,28 @@
 }
 
 h1 {
-    font-family: 'Baloo Tamma 2', cursive;
-    font-size: 70px;
-    color: darkblue;
-    margin-bottom: 10px;
+  font-family: 'Baloo Tamma 2', cursive;
+  font-size: 70px;
+  color: darkblue;
+  margin-bottom: 10px;
 }
 
 h2 {
-    font-family: 'Baloo Tamma 2', cursive; 
-    font-size: 40px;
-    color: steelblue;
-    margin-top: 0px;
+  font-family: 'Baloo Tamma 2', cursive; 
+  font-size: 40px;
+  color: steelblue;
+  margin-top: 0px;
 }
 
 body {
-    text-align: center; 
-    border: 5px solid  skyblue;
-    border-radius: 20px;
+  text-align: center; 
+  border: 5px solid  skyblue;
+  border-radius: 20px;
 }
 
 p, div, h3 {
-    font-family: 'Lato', sans-serif;
-    font-size: 22px;
+  font-family: 'Lato', sans-serif;
+  font-size: 22px;
 }
 
 ol>li {
@@ -58,28 +58,28 @@ ol>li:before {
 
 /* Hide slides by default */
 .slide {
-    display: none;
+  display: none;
 }
 
 /* Previous and next buttons */
 .prev, .next {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    margin-top: -25px;
-    color: whitesmoke;
-    font-size: 40px;
-    font-weight: bold;
-    padding: 18px;
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  margin-top: -25px;
+  color: whitesmoke;
+  font-size: 40px;
+  font-weight: bold;
+  padding: 18px;
 
 }
 
 .prev {
-    left: 2px;
+  left: 2px;
 }
 
 .next {
-    right: 2px;
+  right: 2px;
 }
 
 /* Information table */
@@ -92,31 +92,61 @@ tbody tr:nth-child(even) {
 }
 
 .table {
-    position: relative;
-    margin: auto;
-    align-items: center;
+  position: relative;
+  margin: auto;
+  align-items: center;
 }
 
 td 
 {
-    height: 60px; 
-    width: 250px;
-    text-align: center; 
-    vertical-align: middle;
+  height: 60px; 
+  width: 250px;
+  text-align: center; 
+  vertical-align: middle;
 }
 
 /* Youtube video */
 iframe {
-    height: 400px; 
-    width: 700px;
-
+  height: 400px; 
+  width: 700px;
 }
 
 button {
-    font-family: 'Baloo Tamma 2', cursive; 
-    background-color: cornflowerblue;
-    border-color: cornflowerblue;
-    color: white;
-    border-radius: 9px;
-    font-size: 20px;
+  font-family: 'Baloo Tamma 2', cursive; 
+  background-color: cornflowerblue;
+  border-color: cornflowerblue;
+  color: white;
+  border-radius: 9px;
+  font-size: 20px;
+}
+
+textarea {
+  width: 400px;  
+  height: 150px;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  border: 2px solid darkgray;
+  border-radius: 9px;
+  background-color: whitesmoke;
+  resize: none;
+}
+
+input[type=submit] {
+  font-family: 'Baloo Tamma 2', cursive; 
+  background-color: darkgray;
+  border: black;
+  color: white;
+  padding: 10px 20px;
+  margin: 3px 2px;
+  border-radius: 9px;
+  cursor: pointer;
+}
+
+#comments-container {
+  display: inline-block;
+  width: 600px;
+  margin: auto;
+  color: slategray;
+  font-size: 20px; 
+  word-wrap: break-word;
 }
