add loading comments from Datastore (Servlet - step 5)

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -148,5 +148,5 @@ input[type=submit] {
   margin: auto;
   color: slategray;
   font-size: 20px; 
-  word-wrap: break-word;
+  word-break: break-all;
 }
