--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -146,7 +146,20 @@ input[type=submit] {
   display: inline-block;
   width: 600px;
   margin: auto;
-  color: slategray;
+  padding: 1em 0 1em 0;
   font-size: 20px; 
   word-break: break-all;
+}
+
+label {
+  font-family: 'Lato', sans-serif;
+  color: dimgray;
+  font-size: 18px;    
+}
+
+#delete-button {
+  background-color: aliceblue;
+  border-color: aliceblue;
+  color: black;
+  font-size: 16px;
 }
