--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -148,8 +148,8 @@ input[type=submit] {
   background-color: darkgray;
   border: black;
   color: white;
-  padding: 10px 20px;
-  margin: 3px 2px;
+  padding: 7px 20px;
+  margin: 5px 2px;
   border-radius: 9px;
   cursor: pointer;
 }
@@ -174,6 +174,7 @@ label {
   border-color: aliceblue;
   color: black;
   font-size: 16px;
+  margin: 15px;toto
 }
 
 .provinse-pagination { 
@@ -228,4 +229,13 @@ label {
   display: table-cell;
   vertical-align: middle;
   padding: 5px;
+}
+
+select[name="chinese-dishes-select"] {
+  font-family: 'Lato', sans-serif;
+  font-size: 20px;
+}
+
+#dish-chart-container {
+  display: inline-block;
 }
